--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Punch the Dude — мобільна версія</title>
+<title>лолчик</title>
 <style>
 :root{--bg:#0b1220;--card:#0f1724;--accent:#ff6b6b;--text:#e6eef8}
 html,body{height:100%;margin:0;font-family:Inter,Arial,Helvetica,sans-serif;background:linear-gradient(180deg,var(--bg),#071026);color:var(--text)}
@@ -241,3 +241,4 @@ sideMsg.addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
